blender-git/0-ERREUR-Compil-AVEC-OSL-1.9.0.20170421.TXT

VOIR commit du 17/04/2017 Fix the handling of alignment for closure structs
 src/include/OSL/oslexec.h
    std::string getstats (int level=1) const;
 
     void register_closure (string_view name, int id, const ClosureParam *params,
-                           PrepareClosureFunc prepare, SetupClosureFunc setup,
-                           int alignment = 1);
+                           PrepareClosureFunc prepare, SetupClosureFunc setup);
+


/build/blender-git/src/blender/intern/cycles/kernel/osl/osl_closures.cpp: In function ‘void ccl::register_closure(OSL_v1_9::ShadingSystem*, const char*, int, OSL_v1_9::ClosureParam*, OSL_v1_9::PrepareClosureFunc)’:
/build/blender-git/src/blender/intern/cycles/kernel/osl/osl_closures.cpp:245:58: error: no matching function for call to ‘OSL_v1_9::ShadingSystem::register_closure(const char*&, int&, OSL_v1_9::ClosureParam*&, void (*&)(OSL_v1_9::RendererServices*, int, void*), NULL, int)’
  ss->register_closure(name, id, params, prepare, NULL, 16);
                                                          ^
In file included from /build/blender-git/src/blender/intern/cycles/kernel/osl/../../kernel/osl/osl_closures.h:40:0,
                 from /build/blender-git/src/blender/intern/cycles/kernel/osl/osl_closures.cpp:36:
/usr/include/OSL/oslexec.h:544:10: note: candidate: void OSL_v1_9::ShadingSystem::register_closure(OpenImageIO_v1_8::string_view, int, const OSL_v1_9::ClosureParam*, OSL_v1_9::PrepareClosureFunc, OSL_v1_9::SetupClosureFunc)
     void register_closure (string_view name, int id, const ClosureParam *params,
          ^~~~~~~~~~~~~~~~
/usr/include/OSL/oslexec.h:544:10: note:   candidate expects 5 arguments, 6 provided
make[2]: *** [intern/cycles/kernel/osl/CMakeFiles/cycles_kernel_osl.dir/build.make:183: intern/cycles/kernel/osl/CMakeFiles/cycles_kernel_osl.dir/osl_closures.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:1473: intern/cycles/kernel/osl/CMakeFiles/cycles_kernel_osl.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
